k8s/policy/gatekeeper/constraint-k8smincaps.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sMinimalCapabilities
metadata:
  name: require-minimal-capabilities
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
